--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,9 @@
 .mtj.tmp/blahahahaha
 
 # Package Files #
-*.jar
-*.war
-*.ear
+*.jar yes I have cookies in it
+*.war why not peace?
+*.ear humans have two of those
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
